--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="skills">
         <h2>C++</h2>
         <div class="skill-row">
-          <img class="computer-img" src="images/BOGO_1.png" alt="robot-img">
+          <img class="computer-img" src="images/BOGO_1.PNG" alt="robot-img">
 
           <h3>Sumo robot: Robot Competition “BOGOTRÓN contest 2019”. (Arduino)</h3>
           <p class="par">This was a robot designed to satisfy the parameters and
@@ -44,7 +44,7 @@
 
         </div>
         <div class="skill-row">
-          <img class="chilli-img" src="images/GRUA.png" alt="hoist-img">
+          <img class="chilli-img" src="images/GRUA.PNG" alt="hoist-img">
 
           <h3>Prototype: Hoist for an automotive line production. (Arduino)</h3>
           <p class="par">This Project involved the design and
@@ -57,7 +57,7 @@ some assigned sequences, representing an assembly line in an automotive fabric. 
 
         </div>
         <div class="skill-row">
-          <img class="computer-img" src="images/ENCODER.png" alt="robot-img">
+          <img class="computer-img" src="images/ENCODER.PNG" alt="robot-img">
 
           <h3>Prototype of an encoder connected to a mobile APP. (Arduino)</h3>
           <p class="par">Prototype designed to
@@ -84,7 +84,7 @@ APP</p>
         </div>
         <h2>Matlab / Simulink</h2>
         <div class="skill-row">
-          <img class="chilli-img" src="images/pendulo.png" alt="robot-img">
+          <img class="chilli-img" src="images/pendulo.PNG" alt="robot-img">
 
 
           <h3>Control for an inverted pendulum digital twin
