--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="skill-row">
           <img class="chilli-img" src="images/GRUA.PNG" alt="hoist-img">
 
-          <h3>Prototype: Hoist for an automotive line production. (Arduino)</h3>
+          <h3>Prototype: Hoist for an automotive production line. (Arduino)</h3>
           <p class="par">This Project involved the design and
 assembly from scratch, up to the
 mechanical and electrical
