--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="top-container">
       <img class="top-coding" src="images/coding.png" alt="coding">
       <div class="title-text">
-        <h1>I'm Julio.</h1>
+        <h1>Julio Alvarez</h1>
         <h2>My <span class="pro">pro</span>yects.</h2>
       </div>
       <img class="bottom-coding" src="images/coding.png" alt="coding">
